# stock-

StockAnalyzer/: app.py  pyproject.toml  run_app.sh
StockAnalyzer/attached_assets/: 2025-03-26T22-34_export.csv  Pasted--Guida-alla-Creazione-di-un-Software-di-Analisi-delle-Azioni-Avanzato-Introduzione-Un-soft-1743026483827.txt  Pasted-After-Hours-Trading-After-Market-e-Pre-Market-sono-due-sessioni-di-trading-che-avvengono-al-di-fuo-1743066300277.txt  Pasted-Bilanciamento-del-Portfolio-Fondamentali-Sentimento-Geopolitica-Rotazione-Settori-Approccio-s-1743078365350.txt  Pasted-Come-Configurare-l-Aggiornamento-Automatico-dei-Prezzi-in-Frontend-su-Replit-Senza-Scrivere-Codice--1743088505239.txt  Pasted-Compound-Interest-Calculator-Uno-strumento-essenziale-per-calcolare-la-crescita-del-tuo-investiment-1743095316734.txt  Pasted-Creazione-di-una-Colonna-con-Prezzi-in-Tempo-Reale-Senza-Ricaricare-la-Pagina-Per-visualizzare-i--1743084404963.txt  Pasted-Creazione-di-una-Colonna-con-Prezzi-in-Tempo-Reale-Senza-Ricaricare-la-Pagina-Per-visualizzare-i--1743086240505.txt  Pasted-Ecco-un-codice-completo-per-un-software-che-mostra-i-prezzi-degli-asset-in-tempo-reale-utilizzando--1743087982865.txt  Pasted-KeyError-current-price-Traceback-File-home-runner-workspace-pythonlibs-lib-python3-11-site--1743081968954.txt  Pasted-TypeError-cannot-convert-the-series-to-class-float-Traceback-File-home-runner-workspace-p-1743073177764.txt  Pasted-TypeError-cannot-convert-the-series-to-class-float-Traceback-File-home-runner-workspace-p-1743073303804.txt  (+2 more)
StockAnalyzer/components/: advanced_tools.py  (+13 more)
(+3 files in other folders)
